fix: add correct line breaks in task-flex.css

--- a/src/ex9_html-css-fundamentals-part1/task-flex.css
+++ b/src/ex9_html-css-fundamentals-part1/task-flex.css
@@ -19,4 +19,7 @@ aside {
   width: 25%;
 }
 
-header, article, section, .module {padding: 1rem;}
+header,
+article,
+section,
+.module {padding: 1rem;}
